trunk/Archive2/ed/00bad3a2c62f1c/output
main.cpp:11:21: error: use of undeclared identifier 'std'
        self.C_impl(std::move(a));
                    ^
main.cpp:20:15: error: non-const lvalue reference to type 'A' cannot bind to a value of unrelated type 'A *'
            C(next, a);
              ^~~~
main.cpp:10:22: note: passing argument to parameter 'self' here
    static args C(A& self, args a=args()) {
                     ^
2 errors generated.
